# FurLang

./: .gitignore  CMakeLists.txt  FurLang.py  OP_CODES.MD  README.md  build.sh  index.fl  init.bat  run.bat  run.sh  test.fl
CLI/: CMakeLists.txt
CLI/src/: CLI.cpp  CLI.hpp
Common/Token/: __init__.py
FurLang/: CMakeLists.txt
FurLang/src/: main.cpp
Interperter/: __init__.py
Lexer/: CMakeLists.txt  __init__.py
Lexer/src/: lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp
Parser/: CMakeLists.txt
Parser/src/: parser.cpp  parser.hpp
Utility/: __init__.py
__ignore__/Python/: FurLang.py
__ignore__/Python/Lexer/: __init__.py
__ignore__/Python/Token/: __init__.py
__ignore__/Python/Unused/: FurLang.py
test/: index.fl  main.py  test.fl
